2003-09-10  JMB  Menu shortcuts and accelerators in desktop versions

    Added shortcuts (underlined letters which activate the item when that
    key is pressed on the keyboard) and accelerators (like "Ctrl-N") for
    menu items where appropriate in the desktop versions.  The Zaurus
    versions work as before, since the underlining and accelerator labels
    take up space and it is unusual to work primarily from the keyboard on a
    PDA (even on the C7x0 models).

2003-09-09  JMB  View selector in row viewer, desktop recent files menu

    The row viewer now has a droplist from which any of the defined views
    can be chosen; the selection of displayed fields is then updated to match
    that view.

    The "recently opened files" list which is tracked starting in version 1.8
    for the benefit of the file browser on the new sharp ROMs is now also
    available as an "Open Recent" submenu under the "File" menu in the
    desktop versions of PortaBase.

2003-09-08  JMB  Text copy from row viewer, time difference calculations

    There is now a copy button in the row viewer which allows you to copy
    the selected text (if any) to the clipboard.

    Also added three new operators for calculated fields: "Seconds_Between",
    "Minutes_Between", and "Hours_Between".  Each returns the difference
    between two time columns, measured using the appropriate unit.  Fixed
    some minor bugs in the calculation editor in the process (the equation
    display and button status sometimes weren't updated correctly).

2003-09-05  JMB  Toolbar button preferences

    Similar to the menu preferences, there is a new tab in the preferences
    dialog which allows selection and ordering of the buttons to be shown
    in the toolbar.  Current options are Save, Add, Edit, Copy, Delete, and
    Quick Filter.

2003-09-04  JMB  Menu layout preferences

    You can now choose which among the Row, View, Sort, and Filter menus